--- a/market.html
+++ b/market.html
@@ -159,7 +159,7 @@
       </div>
      </div>
     </div>
-    <div id="carouselExampleControls" class="carousel slide mobile-carousel" data-bs-ride="carousel">
+    <div id="carouselExampleControls6" class="carousel slide mobile-carousel" data-bs-ride="carousel">
       <div class="carousel-inner">
         <div class="carousel-item active">
            <div class="card-house border-end mt-4 col-md-3 col-sm-4 col-lg-2 px-3">
@@ -295,11 +295,11 @@
         </div>
         </div>
       </div>
-      <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
+      <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls6" data-bs-slide="prev">
         <span class="carousel-control-prev-icon" aria-hidden="true"></span>
         <span class="visually-hidden">Previous</span>
       </button>
-      <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
+      <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls6" data-bs-slide="next">
         <span class="carousel-control-next-icon" aria-hidden="true"></span>
         <span class="visually-hidden">Next</span>
       </button>
@@ -422,7 +422,7 @@
       </div>
      </div>
     </div>
-    <div id="carouselExampleControls" class="carousel slide mobile-carousel" data-bs-ride="carousel">
+    <div id="carouselExampleControls1" class="carousel slide mobile-carousel" data-bs-ride="carousel">
       <div class="carousel-inner">
         <div class="carousel-item active">
            <div class="card-house border-end mt-4 col-md-3 col-sm-4 col-lg-2 px-3">
@@ -558,11 +558,11 @@
         </div>
         </div>
       </div>
-      <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
+      <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls1" data-bs-slide="prev">
         <span class="carousel-control-prev-icon" aria-hidden="true"></span>
         <span class="visually-hidden">Previous</span>
       </button>
-      <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
+      <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls1" data-bs-slide="next">
         <span class="carousel-control-next-icon" aria-hidden="true"></span>
         <span class="visually-hidden">Next</span>
       </button>
@@ -685,7 +685,7 @@
       </div>
      </div>
     </div>
-    <div id="carouselExampleControls" class="carousel slide mobile-carousel" data-bs-ride="carousel">
+    <div id="carouselExampleControls2" class="carousel slide mobile-carousel" data-bs-ride="carousel">
       <div class="carousel-inner">
         <div class="carousel-item active">
            <div class="card-house border-end mt-4 col-md-3 col-sm-4 col-lg-2 px-3">
@@ -821,11 +821,11 @@
         </div>
         </div>
       </div>
-      <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
+      <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls2" data-bs-slide="prev">
         <span class="carousel-control-prev-icon" aria-hidden="true"></span>
         <span class="visually-hidden">Previous</span>
       </button>
-      <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
+      <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls2" data-bs-slide="next">
         <span class="carousel-control-next-icon" aria-hidden="true"></span>
         <span class="visually-hidden">Next</span>
       </button>
@@ -948,7 +948,7 @@
       </div>
      </div>
     </div>
-    <div id="carouselExampleControls" class="carousel slide mobile-carousel" data-bs-ride="carousel">
+    <div id="carouselExampleControls3" class="carousel slide mobile-carousel" data-bs-ride="carousel">
       <div class="carousel-inner">
         <div class="carousel-item active">
            <div class="card-house border-end mt-4 col-md-3 col-sm-4 col-lg-2 px-3">
@@ -1084,11 +1084,11 @@
         </div>
         </div>
       </div>
-      <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
+      <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls3" data-bs-slide="prev">
         <span class="carousel-control-prev-icon" aria-hidden="true"></span>
         <span class="visually-hidden">Previous</span>
       </button>
-      <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
+      <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls3" data-bs-slide="next">
         <span class="carousel-control-next-icon" aria-hidden="true"></span>
         <span class="visually-hidden">Next</span>
       </button>
@@ -1211,7 +1211,7 @@
       </div>
      </div>
     </div>
-    <div id="carouselExampleControls" class="carousel slide mobile-carousel" data-bs-ride="carousel">
+    <div id="carouselExampleControls4" class="carousel slide mobile-carousel" data-bs-ride="carousel">
       <div class="carousel-inner">
         <div class="carousel-item active">
            <div class="card-house border-end mt-4 col-md-3 col-sm-4 col-lg-2 px-3">
@@ -1347,11 +1347,11 @@
         </div>
         </div>
       </div>
-      <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
+      <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls4" data-bs-slide="prev">
         <span class="carousel-control-prev-icon aria-hidden="true"></span>
         <span class="visually-hidden">Previous</span>
       </button>
-      <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
+      <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls4" data-bs-slide="next">
         <span class="carousel-control-next-icon" aria-hidden="true"></span>
         <span class="visually-hidden">Next</span>
       </button>
@@ -1474,7 +1474,7 @@
       </div>
      </div>
     </div>
-    <div id="carouselExampleControls" class="carousel slide mobile-carousel" data-bs-ride="carousel">
+    <div id="carouselExampleControls5" class="carousel slide mobile-carousel" data-bs-ride="carousel">
       <div class="carousel-inner">
         <div class="carousel-item active">
            <div class="card-house border-end mt-4 col-md-3 col-sm-4 col-lg-2 px-3">
@@ -1610,11 +1610,11 @@
         </div>
         </div>
       </div>
-      <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
+      <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls5" data-bs-slide="prev">
         <span class="carousel-control-prev-icon" aria-hidden="true"></span>
         <span class="visually-hidden">Previous</span>
       </button>
-      <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
+      <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls5" data-bs-slide="next">
         <span class="carousel-control-next-icon" aria-hidden="true"></span>
         <span class="visually-hidden">Next</span>
       </button>
