linked the all catergories in contact.html

--- a/contact.html
+++ b/contact.html
@@ -225,35 +225,35 @@
       <h3 class="ps-3">All Categories</h3>
       <hr class="text-primary ">
       <li class="text-capitalize ps-3 list-unstyled ">
-        <a class="text-decoration-none text-dark" href="market.html">shoes</a>
+        <a class="text-decoration-none text-dark" href="market.html#shoes">shoes</a>
       </li>
       <hr>
       <li class="text-capitalize ps-3 list-unstyled ">
-        <a class="text-decoration-none text-dark" href="market.html">
+        <a class="text-decoration-none text-dark" href="market.html#purses">
           purses
         </a>
       </li>
       <hr>
       <li class="text-capitalize ps-3 list-unstyled ">
-        <a class="text-decoration-none text-dark" href="#">
+        <a class="text-decoration-none text-dark" href="market.html#slippers">
           slippers
         </a>
       </li>
       <hr>
       <li class="text-capitalize ps-3 list-unstyled ">
-        <a class="text-decoration-none text-dark" href="#">
+        <a class="text-decoration-none text-dark" href="market.html#wedge">
           wedge
         </a>
       </li>
       <hr>
       <li class="text-capitalize ps-3 list-unstyled ">
-        <a class="text-decoration-none text-dark" href="#">
+        <a class="text-decoration-none text-dark" href="market.html#half-shoes">
           half-shoes
         </a>
       </li>
       <hr>
       <li class="text-capitalize ps-3 list-unstyled ">
-        <a class="text-decoration-none text-dark" href="#">
+        <a class="text-decoration-none text-dark" href="market.html#shoesandbag">
           shoes and bag
         </a>
       </li>
