corrected the carousel and marketplace

--- a/index.html
+++ b/index.html
@@ -47,27 +47,27 @@
         <div id="carouselExampleSlidesOnly" class="carousel slide col-md-12 col-lg-8 " data-bs-ride="carousel">
           <div class="carousel-inner">
             <div class="carousel-item active">
-              <div class="image col-md-12">
+              <div class="image col-md-10">
                 <img src="./image/lv half shoes.jpg"  alt="">
               </div>
             </div>
             <div class="carousel-item">
-              <div class="image col-md-12">
-                <img  src="./image/gold wedge.jpg" alt="">
+              <div class="image col-md-10">
+                <img  src="./image/blue gold round bottom.jpg" alt="">
               </div>
             </div>
             <div class="carousel-item">
-              <div class="image col-md-12">
+              <div class="image col-md-10">
                 <img  src="./image/classy purse.jpg" alt="">
               </div>
             </div>
             <div class="carousel-item">
-              <div class="image col-md-12">
+              <div class="image col-md-10">
                 <img  src="./image/purple wedge.jpg" alt="">
               </div>
             </div>
             <div class="carousel-item">
-              <div class="image col-md-12">
+              <div class="image col-md-10">
                 <img  src="./image/gold slippers wedge.jpg" alt="">
               </div>
             </div>
